--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   carousel_slider: ^4.0.0
   get: ^4.6.5
   flutter_vector_icons: ^2.0.0
+  permission_handler: ^10.2.0
+  shared_preferences: ^2.0.17
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
